feat: enhance PWA installation prompts and improve toast message duration

--- a/public/index.html
+++ b/public/index.html
@@ -192,7 +192,7 @@
 
             <div class="sidebar-footer">
                 <div class="sidebar-credit"><i class="fas fa-bolt"></i> Built by <a href="https://github.com/Luma-exe" target="_blank" rel="noopener">Luma</a></div>
-                <button class="install-app-btn hidden" id="installAppBtn" onclick="installPWA()">
+                <button class="install-app-btn" id="installAppBtn" onclick="installPWA()">
                     <i class="fas fa-download"></i> Install App
                 </button>
                 <div class="server-status" id="serverStatus">
@@ -290,7 +290,7 @@
 
                     <div class="landing-cta-row">
                         <button class="landing-cta-btn" onclick="switchTool('downloader')"><i class="fas fa-rocket"></i> Open Toolkit</button>
-                        <button class="landing-install-btn hidden" id="landingInstallBtn" onclick="installPWA()"><i class="fas fa-download"></i> Install App</button>
+                        <button class="landing-install-btn" id="landingInstallBtn" onclick="installPWA()"><i class="fas fa-download"></i> Install App</button>
                     </div>
                 </div>
             </div>
