--- a/public/index.html
+++ b/public/index.html
@@ -224,7 +224,7 @@
                     </div>
 
                     <div class="landing-about">
-                        <p>LumaTools was built out of frustration with bloated online converters full of ads and upload limits. We're upfront about how it works: <strong>almost every tool runs in your browser</strong>. Your files are processed locally using WebAssembly (FFmpeg in the browser) — they never leave your machine. The only tools that use our server are the ones that have to: video processing (trim, compress, to-GIF, etc.), PDF tools (Ghostscript), and the media downloader (yt-dlp). We don't store or log your files.</p>
+                        <p>LumaTools was built out of frustration with bloated online converters full of ads and upload limits. We're upfront about how it works: <strong>most tools run entirely in your browser</strong>. Your files are processed locally using WebAssembly — they never leave your machine. The only tools that use our server are ones that genuinely need it: all video tools (FFmpeg), PDF tools (Ghostscript), background removal, metadata stripping, audio normalisation, hash generation, and the media downloader (yt-dlp). We don't store or log your files.</p>
                     </div>
 
                     <div class="landing-behind">
@@ -232,11 +232,11 @@
                         <div class="landing-behind-grid">
                             <div class="landing-behind-card in-browser">
                                 <span class="landing-behind-badge"><i class="fas fa-lock"></i> In your browser</span>
-                                <p>Image compress, resize, convert, crop, background remove, metadata strip. Audio convert (under ~50MB). Favicon generator. QR, Base64, JSON, color tools. Your data never leaves your device.</p>
+                                <p>Image compress, resize, convert, crop, favicon generator, privacy redaction. Audio convert (under ~50MB). QR code, Base64, JSON formatter, colour converter, Markdown preview, difference checker, word counter. Your data never leaves your device.</p>
                             </div>
                             <div class="landing-behind-card on-server">
                                 <span class="landing-behind-badge"><i class="fas fa-server"></i> On our server</span>
-                                <p>All video tools (compress, trim, to-GIF, speed, stabilize, etc.), PDF compress/merge/to-images, audio normalize, media downloader (YouTube, etc.), hash generator. Files are processed and deleted; we don't keep them.</p>
+                                <p>All video tools (compress, trim, convert, to-GIF, GIF to video, extract audio, remove audio, speed change, frame extract, stabilize, subtitles), PDF compress/merge/to-images/images-to-PDF, background remover, metadata strip, audio normalise, hash generator, media downloader. Files are processed and immediately deleted.</p>
                             </div>
                         </div>
                     </div>
@@ -260,31 +260,53 @@
                         </div>
                         <div class="landing-feature">
                             <div class="landing-feature-icon"><i class="fas fa-microchip"></i></div>
-                            <h3>Mostly in the browser</h3>
-                            <p>Image and small-audio tools run entirely in your browser (FFmpeg.wasm). Video and PDF tools run on our server because they need native FFmpeg and Ghostscript — we're transparent about which is which.</p>
+                            <h3>Transparent by design</h3>
+                            <p>Every tool in the sidebar is labelled — a green dot means it runs in your browser, amber means it uses our server. No surprises, no hidden uploads.</p>
                         </div>
                         <div class="landing-feature">
                             <div class="landing-feature-icon"><i class="fas fa-download"></i></div>
                             <h3>Install as an App</h3>
-                            <p>LumaTools is a Progressive Web App. Install it to your desktop for instant access, offline support, and a native app experience.</p>
+                            <p>LumaTools is a Progressive Web App. Install it to your desktop or phone for instant access and a native app experience.</p>
                         </div>
                     </div>
 
                     <div class="landing-tools-overview">
-                        <h2>20+ Tools, Zero Ads</h2>
+                        <h2>30+ Tools, Zero Ads</h2>
                         <div class="landing-tool-chips">
                             <span class="landing-chip" onclick="switchTool('downloader')"><i class="fas fa-download"></i> Media Downloader</span>
                             <span class="landing-chip" onclick="switchTool('image-compress')"><i class="fas fa-compress-alt"></i> Image Compress</span>
-                            <span class="landing-chip" onclick="switchTool('image-resize')"><i class="fas fa-expand-arrows-alt"></i> Resize</span>
-                            <span class="landing-chip" onclick="switchTool('image-convert')"><i class="fas fa-exchange-alt"></i> Convert</span>
+                            <span class="landing-chip" onclick="switchTool('image-resize')"><i class="fas fa-expand-arrows-alt"></i> Image Resize</span>
+                            <span class="landing-chip" onclick="switchTool('image-convert')"><i class="fas fa-exchange-alt"></i> Image Convert</span>
+                            <span class="landing-chip" onclick="switchTool('image-crop')"><i class="fas fa-crop-alt"></i> Image Crop</span>
+                            <span class="landing-chip" onclick="switchTool('image-bg-remove')"><i class="fas fa-user-alt"></i> Background Remover</span>
+                            <span class="landing-chip" onclick="switchTool('redact')"><i class="fas fa-user-secret"></i> Privacy Redaction</span>
+                            <span class="landing-chip" onclick="switchTool('favicon-generate')"><i class="fas fa-star"></i> Favicon Generator</span>
+                            <span class="landing-chip" onclick="switchTool('metadata-strip')"><i class="fas fa-eraser"></i> Metadata Strip</span>
                             <span class="landing-chip" onclick="switchTool('video-compress')"><i class="fas fa-file-video"></i> Video Compress</span>
-                            <span class="landing-chip" onclick="switchTool('video-trim')"><i class="fas fa-cut"></i> Trim / Cut</span>
-                            <span class="landing-chip" onclick="switchTool('video-to-gif')"><i class="fas fa-magic"></i> To GIF</span>
+                            <span class="landing-chip" onclick="switchTool('video-trim')"><i class="fas fa-cut"></i> Video Trim</span>
+                            <span class="landing-chip" onclick="switchTool('video-convert')"><i class="fas fa-film"></i> Video Convert</span>
+                            <span class="landing-chip" onclick="switchTool('video-to-gif')"><i class="fas fa-magic"></i> Video to GIF</span>
+                            <span class="landing-chip" onclick="switchTool('gif-to-video')"><i class="fas fa-photo-video"></i> GIF to Video</span>
+                            <span class="landing-chip" onclick="switchTool('video-extract-audio')"><i class="fas fa-volume-up"></i> Extract Audio</span>
+                            <span class="landing-chip" onclick="switchTool('video-remove-audio')"><i class="fas fa-volume-mute"></i> Remove Audio</span>
+                            <span class="landing-chip" onclick="switchTool('video-speed')"><i class="fas fa-tachometer-alt"></i> Speed Change</span>
+                            <span class="landing-chip" onclick="switchTool('video-frame')"><i class="fas fa-camera"></i> Frame Extract</span>
+                            <span class="landing-chip" onclick="switchTool('video-stabilize')"><i class="fas fa-hand-paper"></i> Stabilize</span>
+                            <span class="landing-chip" onclick="switchTool('subtitle-extract')"><i class="fas fa-closed-captioning"></i> Subtitles</span>
                             <span class="landing-chip" onclick="switchTool('audio-convert')"><i class="fas fa-headphones"></i> Audio Convert</span>
+                            <span class="landing-chip" onclick="switchTool('audio-normalize')"><i class="fas fa-balance-scale-right"></i> Audio Normalise</span>
                             <span class="landing-chip" onclick="switchTool('pdf-compress')"><i class="fas fa-file-pdf"></i> PDF Compress</span>
-                            <span class="landing-chip" onclick="switchTool('image-bg-remove')"><i class="fas fa-user-alt"></i> BG Remover</span>
+                            <span class="landing-chip" onclick="switchTool('pdf-merge')"><i class="fas fa-object-group"></i> PDF Merge</span>
+                            <span class="landing-chip" onclick="switchTool('pdf-to-images')"><i class="fas fa-images"></i> PDF to Images</span>
+                            <span class="landing-chip" onclick="switchTool('images-to-pdf')"><i class="fas fa-file-image"></i> Images to PDF</span>
                             <span class="landing-chip" onclick="switchTool('qr-generate')"><i class="fas fa-qrcode"></i> QR Code</span>
-                            <span class="landing-chip" onclick="switchTool('json-format')"><i class="fas fa-file-code"></i> JSON Format</span>
+                            <span class="landing-chip" onclick="switchTool('hash-generate')"><i class="fas fa-fingerprint"></i> Hash Generator</span>
+                            <span class="landing-chip" onclick="switchTool('base64')"><i class="fas fa-code"></i> Base64</span>
+                            <span class="landing-chip" onclick="switchTool('json-format')"><i class="fas fa-file-code"></i> JSON Formatter</span>
+                            <span class="landing-chip" onclick="switchTool('color-convert')"><i class="fas fa-palette"></i> Color Converter</span>
+                            <span class="landing-chip" onclick="switchTool('markdown-preview')"><i class="fab fa-markdown"></i> Markdown Preview</span>
+                            <span class="landing-chip" onclick="switchTool('diff-checker')"><i class="fas fa-code-compare"></i> Difference Checker</span>
+                            <span class="landing-chip" onclick="switchTool('word-counter')"><i class="fas fa-align-left"></i> Word Counter</span>
                         </div>
                     </div>
 
