feat: update landing page content for clarity and conciseness

--- a/public/index.html
+++ b/public/index.html
@@ -224,7 +224,7 @@
                     </div>
 
                     <div class="landing-about">
-                        <p>LumaTools was built out of frustration with bloated online converters full of ads and upload limits. We're upfront about how it works: <strong>most tools run entirely in your browser</strong>. Your files are processed locally using WebAssembly — they never leave your machine. The only tools that use our server are ones that genuinely need it: all video tools (FFmpeg), PDF tools (Ghostscript), background removal, metadata stripping, audio normalisation, hash generation, and the media downloader (yt-dlp). We don't store or log your files.</p>
+                        <p>LumaTools was built out of frustration with bloated online converters full of ads and upload limits. We're upfront about how it works: <strong>most tools run entirely in your browser</strong> — your files are processed locally and never leave your machine. The tools that do use our server are clearly labelled, and we don't store or log your files.</p>
                     </div>
 
                     <div class="landing-behind">
@@ -232,11 +232,11 @@
                         <div class="landing-behind-grid">
                             <div class="landing-behind-card in-browser">
                                 <span class="landing-behind-badge"><i class="fas fa-lock"></i> In your browser</span>
-                                <p>Image compress, resize, convert, crop, favicon generator, privacy redaction. Audio convert (under ~50MB). QR code, Base64, JSON formatter, colour converter, Markdown preview, difference checker, word counter. Your data never leaves your device.</p>
+                                <p>Tools marked <strong>In your browser</strong> in the sidebar run entirely on your device using WebAssembly. Your files are never uploaded anywhere.</p>
                             </div>
                             <div class="landing-behind-card on-server">
                                 <span class="landing-behind-badge"><i class="fas fa-server"></i> On our server</span>
-                                <p>All video tools (compress, trim, convert, to-GIF, GIF to video, extract audio, remove audio, speed change, frame extract, stabilize, subtitles), PDF compress/merge/to-images/images-to-PDF, background remover, metadata strip, audio normalise, hash generator, media downloader. Files are processed and immediately deleted.</p>
+                                <p>Tools marked <strong>On our server</strong> use our backend (FFmpeg, Ghostscript, yt-dlp) because they need native processing power. Files are processed and immediately deleted — we don't keep them.</p>
                             </div>
                         </div>
                     </div>
