Enhance logging and statistics tracking
- Updated `discord_log_tool` calls in `routes_tools.cpp` to include the remote address of the requester for better traceability.
- Modified the statistics tracking implementation in `stats.cpp` to hash IP addresses for privacy and added a new parameter to `stat_record` for logging visitor hashes.
- Improved the daily digest functionality to include unique visitor counts and event summaries.
- Refactored code for better readability and maintainability, including consistent formatting and comments.

--- a/public/index.html
+++ b/public/index.html
@@ -1611,5 +1611,27 @@
         navigator.serviceWorker.register('/sw.js').catch(() => {});
     }
     </script>
+    <!-- Click event tracking -->
+    <script>
+    (function() {
+        function trackEvent(name) {
+            fetch('/api/stats/event', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ name: name })
+            }).catch(() => {});
+        }
+        document.addEventListener('click', function(e) {
+            var el = e.target.closest('a');
+            if (!el) return;
+            var href = el.getAttribute('href') || '';
+            if (href.includes('ko-fi.com')) {
+                trackEvent('kofi_click');
+            } else if (href.includes('github.com/Luma-exe') || el.closest('[href*="github.com/Luma-exe"]')) {
+                trackEvent('github_click');
+            }
+        }, true);
+    })();
+    </script>
 </body>
 </html>
