feat: enhance file result display with previews and ZIP download functionality

--- a/public/index.html
+++ b/public/index.html
@@ -261,7 +261,7 @@
                         <div class="landing-feature">
                             <div class="landing-feature-icon"><i class="fas fa-microchip"></i></div>
                             <h3>Transparent by design</h3>
-                            <p>Every tool in the sidebar is labelled — a green dot means it runs in your browser, amber means it uses our server. No surprises, no hidden uploads.</p>
+                            <p>Click any tool to see how it runs — a green dot means it runs entirely in your browser, amber means it uses our server. No surprises, no hidden uploads.</p>
                         </div>
                         <div class="landing-feature">
                             <div class="landing-feature-icon"><i class="fas fa-download"></i></div>
