--- a/public/index.html
+++ b/public/index.html
@@ -261,7 +261,7 @@
                         <div class="landing-feature">
                             <div class="landing-feature-icon"><i class="fas fa-microchip"></i></div>
                             <h3>Transparent by design</h3>
-                            <p>Click any tool to see how it runs — a green dot means it runs entirely in your browser, amber means it uses our server. No surprises, no hidden uploads.</p>
+                            <p>Open any tool and check the tag on the right — green means it runs entirely in your browser, purple means it uses our server. No surprises, no hidden uploads.</p>
                         </div>
                         <div class="landing-feature">
                             <div class="landing-feature-icon"><i class="fas fa-download"></i></div>
@@ -313,6 +313,14 @@
                     <div class="landing-cta-row">
                         <button class="landing-cta-btn" onclick="switchTool('downloader')"><i class="fas fa-rocket"></i> Open Toolkit</button>
                         <button class="landing-install-btn" id="landingInstallBtn" onclick="installPWA()"><i class="fas fa-download"></i> Install App</button>
+                    </div>
+
+                    <div class="landing-privacy-notice">
+                        <i class="fas fa-shield-halved"></i>
+                        <div>
+                            <strong>What we track &amp; why</strong>
+                            <p>We collect the bare minimum needed to understand how the site is used: which tools are used, whether a request succeeded or failed, and an anonymous daily visitor count. Your IP address is never stored &mdash; it is immediately hashed (one-way, irreversible) and discarded. No personal data, no cookies, no third-party analytics, no ads. Files you process are deleted from our server as soon as your download is ready.</p>
+                        </div>
                     </div>
                 </div>
             </div>
