--- a/public/index.html
+++ b/public/index.html
@@ -292,7 +292,7 @@
                     </div>
 
                     <div class="landing-tools-overview">
-                        <h2>30+ Tools, Zero Ads</h2>
+                        <h2>35+ Tools, Zero Ads</h2>
                         <div class="landing-tool-chips">
                             <span class="landing-chip" onclick="switchTool('downloader')"><i class="fas fa-download"></i> Media Downloader</span>
                             <span class="landing-chip" onclick="switchTool('image-compress')"><i class="fas fa-compress-alt"></i> Image Compress</span>
@@ -318,8 +318,11 @@
                             <span class="landing-chip" onclick="switchTool('audio-normalize')"><i class="fas fa-balance-scale-right"></i> Audio Normalise</span>
                             <span class="landing-chip" onclick="switchTool('pdf-compress')"><i class="fas fa-file-pdf"></i> PDF Compress</span>
                             <span class="landing-chip" onclick="switchTool('pdf-merge')"><i class="fas fa-object-group"></i> PDF Merge</span>
+                            <span class="landing-chip" onclick="switchTool('pdf-split')"><i class="fas fa-scissors"></i> PDF Split</span>
                             <span class="landing-chip" onclick="switchTool('pdf-to-images')"><i class="fas fa-images"></i> PDF to Images</span>
                             <span class="landing-chip" onclick="switchTool('images-to-pdf')"><i class="fas fa-file-image"></i> Images to PDF</span>
+                            <span class="landing-chip" onclick="switchTool('markdown-to-pdf')"><i class="fab fa-markdown"></i> Markdown to PDF</span>
+                            <span class="landing-chip" onclick="switchTool('ai-study-notes')"><i class="fas fa-brain"></i> AI Study Notes</span>
                             <span class="landing-chip" onclick="switchTool('qr-generate')"><i class="fas fa-qrcode"></i> QR Code</span>
                             <span class="landing-chip" onclick="switchTool('hash-generate')"><i class="fas fa-fingerprint"></i> Hash Generator</span>
                             <span class="landing-chip" onclick="switchTool('base64')"><i class="fas fa-code"></i> Base64</span>
@@ -328,6 +331,7 @@
                             <span class="landing-chip" onclick="switchTool('markdown-preview')"><i class="fab fa-markdown"></i> Markdown Preview</span>
                             <span class="landing-chip" onclick="switchTool('diff-checker')"><i class="fas fa-code-compare"></i> Difference Checker</span>
                             <span class="landing-chip" onclick="switchTool('word-counter')"><i class="fas fa-align-left"></i> Word Counter</span>
+                            <span class="landing-chip" onclick="switchTool('csv-json')"><i class="fas fa-table"></i> CSV ↔ JSON</span>
                         </div>
                     </div>
 
